# scopetraceai-platform

./: .gitignore  AUTHENTICATION_AUDIT_REPORT.md  AUTHENTICATION_ERROR_STANDARDIZATION.md  BOT_PROTECTION_IMPLEMENTATION.md  CENTRALIZED_ENTITLEMENTS_ARCHITECTURE.md  EMAIL_VALIDATION_SECURITY_AUDIT.md  ENV_VARIABLES_GUIDE.md  OWNER_BYPASS_IMPLEMENTATION.md  OWNER_BYPASS_PREFLIGHT_REPORT.md  PRE_PROD_AUDIT_REPORT.md  PROJECT_STRUCTURE.md  README.md  README_STARTUP.md  SUBSCRIPTION_STATUS_AUDIT_REPORT.md  TestPlanCreationDocumentation.pages  WELCOME_EMAIL_IMPLEMENTATION.md  WELCOME_EMAIL_IMPLEMENTATION_SUMMARY.md  check_services.sh  start_all_services.sh  stop_all_services.sh
ai-sr-business-req-analyst/: .env.example  .gitignore  DEBUG_500_ANALYZE.md  ENV_VARIABLES_PRODUCTION.md  README.md  SampleAPIDoc.docx  SampleAPIDoc.txt  TROUBLESHOOTING_500_ERROR.md  busRequirement_1.json  fix_env.py  requirements.txt  (+16 more)
jira-writeback-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  verify_entitlements_fix.py
jira-writeback-agent/api/: rewrite.py
jira-writeback-agent/audit_logs/: audit_2026-01-07.jsonl  audit_2026-01-08.jsonl  audit_2026-01-11.jsonl  audit_2026-01-14.jsonl  audit_2026-01-16.jsonl  audit_2026-01-17.jsonl  audit_2026-01-18.jsonl
jira-writeback-agent/middleware/: internal_auth.py
jira-writeback-agent/services/: audit_logger.py  entitlements.py  jira_client.py  run_limits.py
jira-writeback-agent/src/jira_writeback_agent/: agent.py  config.py
jira-writeback-agent/tests/: test_create.py  test_entitlements.py  test_mapping.py
(+451 files in other folders)
