[project]
name = "jira-writeback-agent"
version = "1.0.0"
description = "Deterministic Jira write-back agent"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyJWT>=2.8.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

